# llm_testplay

./: README.md  pyproject.toml  sample.ipynb
docker/: Dockerfile  build.sh  docker-compose.yml  requirements.txt
notebook/: dataanalysis.ipynb
notebook/rinna/: nekomata-7b-instruction.ipynb  nekomata-7b.ipynb
notebook/rinna/rinna/: nekomata-7b-instruction.ipynb  nekomata-7b.ipynb
notebook/yanekyuk/: bert-uncased-keyword-extractor.ipynb
