[tool.poetry]
name = "llm-testplay"
version = "0.1.0"
description = ""
authors = ["hayato <k1sh1kawa@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nptyping = "^1.4.4"
pydantic = "~2.5.1"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
typer = "^0.4.0"
fire = "^0.4.0"
jaconv = "^0.3"
mecab-python3 = "^1.0.5"
datasets = "^2.0.0"
sumeval = "^0.2.2"
fugashi = "^1.1.2"
ipadic = "^1.0.0"
gensim = "^4.1.2"
sentencepiece = "^0.1.96"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
SudachiPy = "^0.6.3"
SudachiDict-core = "^20211220"
Janome = "^0.4.2"
python-Levenshtein = "^0.12.2"
jsonlines = "^3.0.0"
scikit-learn = "^1.2.0"
isort = "^5.12.0"
transformers = "^4.29.2"
accelerate = "^0.20.3"
nsbridge = {git = "https://github.com/elyza-inc/nlp_service_bridge", tag = "v2.1.0"}
unidic-lite = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^0.0.1a5"
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = "^22.1.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-profiling = "^1.7.0"
pytest-randomly = "^3.11.0"
pytest-timeout = "^2.1.0"
pytest-xdist = "^2.5.0"
tox = "^4.11.3"
moto = "^4.0.3"
pytest-mock = "^3.8.2"
pytest-reportlog = "^0.1.2"
ipykernel = "^6.25.2"

[tool.poetry.group.cuda.dependencies]
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
japanize-matplotlib = "^1.1.3"
bert-score = "^0.3.11"
wordcloud = "^1.8.1"
black = {extras = ["jupyter"], version = "^22.6.0"}
tensorboard = "^2.8.0"
progressbar2 = "^4.0.0"
emoji = "^1.7.0"
pytablewriter = "^0.64.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
bokeh = "^2.4.2"
holoviews = "^1.14.8"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterthemes = "^0.20.0"
jupyterlab-spreadsheet-editor = "^0.6.1"
requests = "^2.27.1"
tqdm = "^4.63.0"
qgrid = "^1.3.1"
itables = "^0.4.7"
jupyter-autotime = "^1.1.0"
deepspeed = "^0.12.5"
mpi4py = "^3.1.4"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = ["scripts", ".venv", ".tox"]

[tool.black]
skip-string-normalization = true
include = '\.py$'

[tool.pytest.ini_options]
addopts = "-rxXs --randomly-seed=1234 --randomly-dont-reorganize"
env = "D:TFIDF_DIR=tests/fixtures/models/tfidf"
testpaths = "tests/"

[tool.mypy]
python_version=3.10
files = "src/maebashi_pencil"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.flake8]
max-line-length = 88
ignore = "D, E203, W391, W503"
exclude = " .git, .venv, __pycache__, data, dist, misc, notebooks, prof, tmp, workspacea, .tox"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
